--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no,viewport-fit=cover"
     />
-    <title>余朝靖的简历</title>
+    <title>小余的简历</title>
   </head>
   <body>
     <style id="style"></style>
